card crud view implemented

--- a/TaskBoard.UI/src/app/components/cardlist/cardlist.component.html
+++ b/TaskBoard.UI/src/app/components/cardlist/cardlist.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div>
-      <button class="add-card-button" (click)="addCardButton()">+ Add new card</button>
+      <button class="add-card-button" (click)="initNewCard(cardList.id)">+ Add new card</button>
     </div>
     <div class="cards-container">
       <div class="card-item" *ngFor="let card of cardList.cards">
@@ -23,15 +23,17 @@
           <div class="menu-button">
             <button class="menu-button-dots">&#8942;</button>
             <div class="menu">
-              <button class="edit-button">Edit</button>
-              <button class="delete-button">Delete</button>
+              <button class="edit-button" (click)="editCard(card)">Edit</button>
+              <button class="delete-button" (click)="deleteCard(card.id)">Delete</button>
             </div>
           </div>
         </div>
         <div class="card-content">
           <p class="description">{{ card.description }}</p>
           <p class="due-date">
-            <img src="https://img2.freepng.ru/20180403/rsq/kisspng-calendar-date-computer-icons-time-calendar-icon-5ac41db68edb81.1459769815228021025852.jpg" alt="Calendar Icon" class="calendar-icon">
+            <img
+              src="https://img2.freepng.ru/20180403/rsq/kisspng-calendar-date-computer-icons-time-calendar-icon-5ac41db68edb81.1459769815228021025852.jpg"
+              alt="Calendar Icon" class="calendar-icon" fill>
             Due Date: {{ card.dueDate | date:'EEE, d MMM' }}
           </p>
           <div class="priority-container">
@@ -40,7 +42,7 @@
           </div>
         </div>
         <div class="card-footer">
-          <select class="move-to-dropdown">
+          <select class="move-to-dropdown" [(ngModel)]="selectedListId" (change)="moveCardTo(card.id)">
             <option value="" disabled selected>Move to:</option>
             <ng-container *ngFor="let list of cardLists">
               <option [value]="list.id" *ngIf="list.id !== card.cardListId">{{ list.name }}</option>
@@ -56,5 +58,14 @@
   <app-edit-cardlist
     [cardlist]="cardlistToEdit"
     (cardlistsUpdated)="updateCardLists($event)"
+    (cardListFormClose)="closeCardListForm()"
   ></app-edit-cardlist>
 </div>
+
+<app-edit-card
+  [card]="cardToEdit"
+  (cardlistsUpdated)="updateCardLists($event)"
+  (cardFormClose)="closeCardForm()"
+></app-edit-card>
+
+
