--- a/TaskBoard.UI/src/app/components/history-log/history-log.component.css
+++ b/TaskBoard.UI/src/app/components/history-log/history-log.component.css
@@ -30,35 +30,53 @@
 
 .history-list {
   overflow-y: auto;
-  max-height: calc(100% - 100px); /* Висота мінус висота заголовку та кнопки */
+  max-height: calc(100% - 150px);
 }
 
 .history-item {
+  font-size: 16px;
+  color: #555;
+  margin-top: 30px;
+}
+
+.text-with-circle {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+}
+
+.change-description{
+  margin: 5px;
+}
+
+.change-date{
+  margin: 5px;
+  margin-left: 30px;
 }
 
 .circle {
-  width: 10px;
-  height: 10px;
+  width: 3px;
+  height: 3px;
   border-radius: 50%;
-  background-color: #007bff; /* Колір кружечка */
+  background-color: #555;
   margin-right: 10px;
+  padding: 2px;
 }
 
 .show-more-button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
+  position: absolute;
+  bottom: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: transparent;
+  color: #777;
+  border: 2px solid #ccc;
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
   border-radius: 5px;
-  margin-top: 20px;
   width: 100%;
 }
 
 .show-more-button:hover {
-  background-color: #0056b3;
+  background-color: #ececec;
 }
