--- a/TaskBoard.UI/src/app/components/board/board.component.html
+++ b/TaskBoard.UI/src/app/components/board/board.component.html
@@ -1,16 +1,21 @@
-<div class="board-list-container">
-  <div class="board-list-group" *ngFor="let cardList of cardLists">
-    <div class="board-list-item">
-      <h4 class="board-list-name">{{ cardList.name }}</h4>
-      <h4 class="list-count">{{ cardList.cards.length }}</h4>
-      <h4 class="card-count">{{ cardList.cards.length }}</h4>
+<div class="board-container">
+  <div class="board-group" *ngFor="let board of boards">
+    <div class="board-item">
+      <button (click)="openBoard(board.id)">
+      <h4 class="board-name">{{ board.name }}</h4>
+      </button>
       <div class="menu-button">
         <button class="menu-button-dots">&#8942;</button>
         <div class="menu">
-          <button class="edit-button" (click)="editCardList(cardList)">Edit</button>
-          <button class="delete-button" (click)="deleteCardList(cardList.id)">Delete</button>
+          <button class="edit-button" (click)="editBoard(board)">Edit</button>
+          <button class="delete-button" (click)="deleteBoard(board.id)">Delete</button>
         </div>
       </div>
     </div>
+    <h4 class="list-count">Card count: {{ board.cardListCount }}</h4>
+    <h4 class="card-count">Card list count: {{ board.cardCount }}</h4>
+  </div>
+  <div class="board-add" *ngIf="!boardToEdit">
+    <button class="board-add-button" (click)="initNewBoard()">Add new board</button>
   </div>
 </div>
