--- a/TaskBoard.UI/src/app/components/board/edit-board/edit-board.component.html
+++ b/TaskBoard.UI/src/app/components/board/edit-board/edit-board.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
   <div class="button-container">
-    <button class="button-add" (click)="createBoard(board)" *ngIf="!board.id">Add list</button>
+    <button class="button-add" (click)="createBoard(board)" *ngIf="!board.id">Add Board</button>
     <button class="button-save" (click)="updateBoard(board)" *ngIf="board.id">Save</button>
     <button class="button-cancel" (click)="cancel()">Cancel</button>
   </div>
