--- a/TaskBoard.UI/src/app/components/card/card.component.html
+++ b/TaskBoard.UI/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="card" class="modal-container">
-  <div class="modal-dialog" role="document">
+<div *ngIf="cardId" class="modal-container">
+  <div *ngIf="card$ | async as card" class="modal-dialog" role="document">
     <div class="modal-body">
       <button class="close-button" (click)="cancel()">×</button>
       <div class="left-pane">
