--- a/TaskBoard.UI/src/app/components/cardlist/cardlist.component.html
+++ b/TaskBoard.UI/src/app/components/cardlist/cardlist.component.html
@@ -66,7 +66,7 @@
 
 <app-edit-card
   [card]="cardToEdit"
-  (cardFormClose)="closeCardForm()"
+  (cardFormClose)="closeCardForm($event)"
 ></app-edit-card>
 
 <app-card
